--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,6 @@ header h1 {
 footer {
   position: absolute;
   text-align: center;
-  bottom: 0;
   width: 100%;
   height: 2.5rem;
 }
@@ -62,7 +61,10 @@ footer p {
   width: 36px;
   height: 36px;
   border: none;
+  border-radius: .2rem;
+  margin: .3rem;
   cursor: pointer;
+  background: transparent;
 }
 
 .listBtn {
@@ -70,13 +72,14 @@ footer p {
 }
 
 .done {
-  background-color: lightgreen;
-  box-shadow: 0 2px 5px green;
+  background-color: #d4edda;
+  color: #155724;
+  text-decoration: line-through;
 }
 
 .notDone {
-  background-color: orangered;
-  box-shadow: 0 2px 5px red;
+  background-color: #fff;
+  color: #721c24;
 }
 
 form.create-todo {
@@ -120,10 +123,11 @@ form.create-todo button {
   font-size: 1em;
   padding: 0.3em;
   background-color: #f5ba13;
-  border-radius: 5px;
-  transition: background-color 0.5s;
+  border: none;
+  border-radius: .5rem;
+  transition: background-color 0.3s;
 }
 
 .cancelBtn button:hover {
-  background-color: orange;
+  background-color: #f59813;
 }
